omni/tests/goldens/types/undefined_ident_03.err
tests/goldens/types/undefined_ident_03.omni:1:19: error: undefined identifier "missing3"
  let result3:int = missing3
                    ^~~ hint: declare the name before using it
